--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<h1 id="title2">palabra</h1>
 	</header>
 	<div id="maindiv">
-		<div id="a" class="circle">A</div>
+		<div id="a" class="circle">S</div>
 		<div id="b" class="circle">B</div>
 		<div id="c" class="circle">C</div>
 		<div id="d" class="circle">D</div>
